# investment-and-trading

./: .flake8  .gitignore  README.md  pyproject.toml
data/logs/: log_AAPL.json  log_ABT.json  log_ACN.json  log_ADBE.json  log_ADI.json  log_ADP.json  log_AMGN.json  log_AMT.json  log_AMZN.json  log_AON.json  log_APD.json  log_BA.json  log_BDX.json  log_BKNG.json  log_BLK.json  log_BMY.json  log_CAT.json  log_CB.json  log_CCI.json  log_CI.json  log_CL.json  log_CMCSA.json  log_COST.json  log_CRM.json  log_CSCO.json  log_CVS.json  log_CVX.json  log_DE.json  log_DHR.json  log_DIS.json  log_DUK.json  log_ECL.json  log_ETN.json  log_FDX.json  log_FIS.json  log_GE.json  log_GILD.json  log_GOOGL.json  log_GS.json  log_HD.json  (+52 more)
data/models/: lstm_AAPL.keras  lstm_ABT.keras  lstm_ACN.keras  lstm_ADBE.keras  lstm_ADI.keras  lstm_ADP.keras  lstm_AMGN.keras  lstm_AMT.keras  lstm_AMZN.keras  lstm_AON.keras  lstm_APD.keras  lstm_BA.keras  lstm_BDX.keras  lstm_BKNG.keras  lstm_BLK.keras  lstm_BMY.keras  lstm_CAT.keras  lstm_CB.keras  lstm_CCI.keras  lstm_CI.keras  lstm_CL.keras  lstm_CMCSA.keras  lstm_COST.keras  lstm_CRM.keras  lstm_CSCO.keras  lstm_CVS.keras  lstm_CVX.keras  lstm_DE.keras  lstm_DHR.keras  lstm_DIS.keras  lstm_DUK.keras  lstm_ECL.keras  lstm_ETN.keras  lstm_FDX.keras  lstm_FIS.keras  lstm_GE.keras  lstm_GILD.keras  lstm_GOOGL.keras  lstm_GS.keras  lstm_HD.keras  (+52 more)
investment_and_trading/: arima_model.py  data_helper.py  lstm_model.py  stock_model.py  types.py
notebooks/: init_predict.ipynb  tickers.txt  walkthrough_ntb.ipynb
notebooks/logs/: log_AAPL.json  log_AMZN.json  log_VZ.json
notebooks/models/: lstm_MSFT.keras  lstm_VZ.keras
stock_price_prediction/: arima_model.py  data_helper.py  lstm_model.py  run_train_lstm.py  stock_model.py  types.py
stock_price_prediction/ui/: app.py  app_archive.txt  stock_predictor.py
