[tool.poetry]
name = "investment-and-trading"
version = "0.1.0"
description = ""
authors = ["Jakub <jakub.zapletal@eon.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ipykernel = "^6.29.5"
yfinance = "^0.2.52"
black = {extras = ["jupyter"], version = "^25.1.0"}


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
