[tool.poetry]
name = "investment-and-trading"
version = "0.1.0"
description = ""
authors = ["Jakub <jakub.zapletal@eon.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ipykernel = "^6.29.5"
yfinance = "^0.2.52"
black = {extras = ["jupyter"], version = "^25.1.0"}
statsmodels = "^0.14.4"
plotly = "^6.0.0"
nbformat = "^5.10.4"
matplotlib = "^3.10.0"
seaborn = "^0.13.2"
pmdarima = "^2.0.4"
numpy = "1.26.4"
tensorflow = "^2.18.0"
isort = "^6.0.0"
flake8 = "^7.1.1"
mypy = "^1.14.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
